fixed spacing

--- a/css/activity.css
+++ b/css/activity.css
@@ -4,7 +4,7 @@
   padding: 92px 0;
 }
 .activity-left-items {
-  padding: 10px 20px;
+  padding: 10px 20px 36px 20px;
   margin-bottom: 20px;
   position: relative;
 }
