--- a/css/header.css
+++ b/css/header.css
@@ -41,6 +41,7 @@ ul {
   cursor: pointer;
 }
 p,
+div,
 h1,
 h2,
 h3 {
