--- a/css/member.css
+++ b/css/member.css
@@ -79,10 +79,13 @@
 .member-ct-min {
   font-size: 0.9rem;
 }
+#member-all {
+  padding: 0 16px 0 0;
+}
 
 @media (max-width: 992px) {
   .member {
-    padding: 72px 10px;
+    padding: 72px 24px;
   }
   .member-hd {
     font-size: 1.25rem;
@@ -108,5 +111,8 @@
   }
   .member-ct-min {
     font-size: 0.8rem;
+  }
+  #member-all {
+    padding: 0;
   }
 }
