--- a/css/visions.css
+++ b/css/visions.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-clip: border-box;
   background-size: cover;
-  padding: 72px;
+  padding: 72px 0;
 }
 p,
 ul,
@@ -32,7 +32,7 @@ h3 {
   background-color: #0c0c31;
   color: #fff;
   margin: 20px 0;
-  padding: 32px 10px;
+  padding: 32px 0 10px 10px;
 }
 .visions-content {
   padding-left: 20px;
